--- a/app/views/users/_cattery_kittens.html.erb
+++ b/app/views/users/_cattery_kittens.html.erb
@@ -7,7 +7,7 @@
             <%= link_to cat_path(cat) do %>
               <%= image_tag(cat.thumbnail, alt:"#{Breed.find(cat.breed_id).name} kitten", data: { 'object-fit': 'cover' }) %>
               <% if !cat.name.blank? %>
-                <span class="card-title"><%= capitalized_name(cat) %></span>
+                <span class="card-title"><%= capitalized_name(cat.name) %></span>
               <% end %>
             <% end %>
           </div>
