--- a/app/views/users/cattery_overview.html.erb
+++ b/app/views/users/cattery_overview.html.erb
@@ -25,7 +25,7 @@
                 <div class="card-image">
                   <%= link_to  edit_cat_path(cat, form: "parent") do %>
                     <%= image_tag(cat.thumbnail, data: { 'object-fit': 'cover' }) if cat.card_picture.attached? %> 
-                    <span class="card-title"><%= capitalized_name(cat) %></span>
+                    <span class="card-title"><%= capitalized_name(cat.name) %></span>
                   <% end %>
                 </div>
                 <%= link_to  edit_cat_path(cat, form: "parent") do %>
@@ -99,8 +99,8 @@
               <div class="card">
                 <div class="card-tabs">
                   <ul class="tabs tabs-fixed-width">
-                    <li class="tab"><a class="active" href="#<%= pair.id %><%= pair.male.id %>"><%= capitalized_name(pair.male) %></a></li>
-                    <li class="tab"><a  href="#<%= pair.id %><%= pair.female.id %>"><%= capitalized_name(pair.female) %></a></li>
+                    <li class="tab"><a class="active" href="#<%= pair.id %><%= pair.male.id %>"><%= capitalized_name(pair.male.name) %></a></li>
+                    <li class="tab"><a  href="#<%= pair.id %><%= pair.female.id %>"><%= capitalized_name(pair.female.name) %></a></li>
                   </ul>
                 </div>
                 <div class="card-image" id="<%= pair.id %><%= pair.male.id %>" >
@@ -174,7 +174,7 @@
                       <%= link_to cat_path(cat), target:"_blank" do %>
                         <%= image_tag(cat.thumbnail, :alt => "card picture", data: { 'object-fit': 'cover' }) if cat.card_picture.attached? %>
                         <% if !cat.name.blank? %>
-                          <span class="card-title"><%= capitalized_name(cat) %></span>
+                          <span class="card-title"><%= capitalized_name(cat.name) %></span>
                         <% end %>
                       <% end %>
                     </div>
