--- a/app/javascript/stylesheets/modules/home.scss
+++ b/app/javascript/stylesheets/modules/home.scss
@@ -387,6 +387,15 @@
   }
 }
 
+.kittens-landing {
+  .card {
+    .material-icons {
+      position: relative;
+      bottom: 3px;
+    }
+  }
+}
+
 .breeds-landing, .kittens-landing, .large-btn-row {
   .btn-wrapper {
     text-align: center;
@@ -449,23 +458,5 @@
     width: 100%;
     position: relative;
     top: 5px;
-  }
-}
-
-// Buy me a coffee
-.bmc-button img {
-  height: 34px !important;
-  width: 35px !important;
-  margin-bottom: 1px !important;
-  box-shadow: none !important;
-  border: none !important;
-  position: relative;
-  top: 10px !important;
-  right: 10px !important;
-}
-
-.bmc-landing {
-  p {
-    font-size: 1.5em;
   }
 }
