--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -2,6 +2,7 @@
 
 <div class="kittens-index">
   <h1><%= t('header.kittens') %></h1>
+  <h4><%= t('cat_info.available') %></h4>
 
   <div class="search-bar">
     <div id="search" class="container">
