--- a/app/javascript/stylesheets/modules/show.scss
+++ b/app/javascript/stylesheets/modules/show.scss
@@ -335,61 +335,61 @@
       }
     }
   } 
+}
 
-  // Other kittens from same litter
-  .other-kittens, #litters, #kittens {
-    .available-text, .check, .unavailable-text, .close  {
-      font-size: 1.2em;
-      font-weight: bold;    
-    }
+// Other kittens from same litter
+.other-kittens, #litters, #kittens, .kittens-landing {
+  .available-text, .check, .unavailable-text, .close  {
+    font-size: 1.2em;
+    font-weight: bold;    
+  }
 
-    .check, .close {
-      font-size: 1.5em;
-    }
+  .check, .close {
+    font-size: 1.5em;
+  }
 
-    .info-available {
+  .info-available {
+    position: relative;
+    right: 15px;
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 10px;
+    margin-bottom: -10px;
+
+    span {
       position: relative;
-      right: 15px;
-      text-align: center;
-      text-transform: uppercase;
-      padding-top: 10px;
-      margin-bottom: -10px;
-
-      span {
-        position: relative;
-        left: 5px;
-        bottom: 5px;
-      }
-    }
-
-    .available-text, .check {
-      color: $secondaryColor;
-    }
-
-    .unavailable-text, .close {
-      color: $errorShade;
+      left: 5px;
+      bottom: 5px;
     }
   }
 
-  #litters, #kittens {
-    .available-text, .check, .unavailable-text, .close {
-      font-size: 1em;
-    }
+  .available-text, .check {
+    color: $secondaryColor;
+  }
 
-    .info-available {
-      position: relative;
-      right: 0px;
-      text-align: center;
-    }
-    .carousel, .carousel-item {
-      max-height: 300px;
-    }
+  .unavailable-text, .close {
+    color: $errorShade;
+  }
+}
 
-    .indicators {
-      display: block;
-      transform: scale(1.3);
-      bottom: -10px; 
-    }
+#litters, #kittens, .kittens-landing {
+  .available-text, .check, .unavailable-text, .close {
+    font-size: 1em;
+  }
+
+  .info-available {
+    position: relative;
+    right: 0px;
+    text-align: center;
+  }
+  .carousel, .carousel-item {
+    max-height: 300px;
+  }
+
+  .indicators {
+    display: block;
+    transform: scale(1.3);
+    bottom: -10px; 
   }
 }
 
