--- a/app/javascript/stylesheets/critical.scss
+++ b/app/javascript/stylesheets/critical.scss
@@ -1,9 +1,12 @@
 // Base
 @import 'materialize-css/dist/css/materialize';
+@import "dropzone/dist/min/dropzone.min";
+@import "dropzone/dist/min/basic.min";
 @import 'base/variables';
 @import 'base/media-queries';
 @import 'base/layout';
 @import 'base/base';
+
 
 // Modules
 @import 'modules/header';
