--- a/app/views/users/my_cattery.html.erb
+++ b/app/views/users/my_cattery.html.erb
@@ -68,34 +68,30 @@
       <div class="row">
         <h4 class="form-section-title"><%= t('my_cattery.profile_picture') %></h4>
       </div>
-
-      <div class="row">
-        <div class="col s12">
-          <div class="file-field input-field">
-            <div class="btn">
-              <i class="material-icons-outlined">add_photo_alternate</i>
-              <span><%= t('my_cattery.profile_picture') %></span>
-              <%= f.file_field :profile_picture, accept: "image/jpeg, image/png" %>
-            </div>
-            <div class="file-path-wrapper">
-              <input class="file-path validate" type="text">
-            </div>
-          </div>
-          <%= render 'shared/error_messages', object: @user, field: :profile_picture %>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col s12">
+      
+      <% if @user.profile_picture.attached? %>
+      <div class="dropzone dropzone-default dz-clickable single existing-thumbnail" data-controller="dropzone" data-dropzone-max-file-size="2" data-dropzone-max-files="1" data-dropzone-accepted-files="image/*">
+        <%= f.hidden_field :profile_picture, id:"hidden_profile_picture", value: f.object.profile_picture.signed_id if @user.profile_picture.attached? %>
+        <%= f.file_field :profile_picture, direct_upload: true, data: { target: 'dropzone.input' } %>
+        
+        <div class="dropzone-msg dz-message needsclick">
+          <h3 class="dropzone-msg-title"><%= t('form.dropzone.drag_or_click_single') %></h3>
+          <span class="dropzone-msg-desc text-sm"><%= t('form.dropzone.allowed_file_type') %> <%= t('form.dropzone.allowed_file_size') %></span>
           <div class="card-picture-preview">
-            <% if @user.profile_picture.blank? %>
-              <span><%= t('words.preview') %> *</span>
-            <% else %>
-              <%= image_tag(@user.profile_picture, data: { 'object-fit': 'cover' }) if @user.profile_picture.attached? %> 
-            <% end %>
+            <%= image_tag(@user.profile_picture.variant(resize_to_limit: [300, 300]), data: { 'object-fit': 'cover' }) if @user.profile_picture.attached? %> 
           </div>
         </div>
       </div>
+      <% else %>
+      <div class="dropzone dropzone-default dz-clickable single" data-controller="dropzone" data-dropzone-max-file-size="2" data-dropzone-max-files="1" data-dropzone-accepted-files="image/*">
+        <%= f.hidden_field :profile_picture, id:"hidden_profile_picture", value: f.object.profile_picture.signed_id if @user.profile_picture.attached? %>
+        <%= f.file_field :profile_picture, direct_upload: true, data: { target: 'dropzone.input' } %>
+        <div class="dropzone-msg dz-message needsclick">
+          <h3 class="dropzone-msg-title"><%= t('form.dropzone.drag_or_click_single') %></h3>
+          <span class="dropzone-msg-desc text-sm"><%= t('form.dropzone.allowed_file_type') %> <%= t('form.dropzone.allowed_file_size') %></span>
+        </div>
+      </div>
+      <% end %>
 
       <div class="row">
         <h4 class="form-section-title"><%= t('my_cattery.address') %></h4>
