--- a/app/javascript/stylesheets/modules/form.scss
+++ b/app/javascript/stylesheets/modules/form.scss
@@ -150,8 +150,12 @@
   }
 
   .inner-form-btn {
+    position: relative;
+    bottom: 3px;
+    display: inline-block;
     min-width: 200px;
-    width: 30%;
+    max-width: 30%;
+    margin-left: 10px;
   }
 
   #showExistingLitters {
@@ -211,6 +215,11 @@
         fill: $errorColor;
       }
     }
+
+    .helper-text {
+      font-size: 1.5em;
+      text-align: center;
+    }
   }
   
   .dropzone.existing-thumbnail, .dropzone.dz-started {
@@ -231,7 +240,7 @@
     }
   
     .helper-text {
-      font-size: 0.8em;
+      display: none;
     }
   }
 
