Add image carousel to kitten show page

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -19,3 +19,5 @@
 @import 'modules/legal';
 @import 'modules/error';
 @import 'modules/mailer';
+@import 'modules/photoswipe/main';
+@import 'modules/photoswipe/default-skin';
