--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -4,8 +4,6 @@
 <% content_for :meta_twitter_image, "#{url_for(@cat.twitter_thumbnail)}" %>
 <% content_for :meta_image_alt, "Kitten card picture" %>
 
-<%= @end_str %>
-
 <div id="kitten-view" class="container">
   <div class="row">
     <div class="col s12">
@@ -99,15 +97,17 @@
             </div>
           </div>
         </div>
-        <div class="pictures-other-container grid">
+        <div id="gallery" class="gallery pictures-other-container grid" itemscope itemtype="http://schema.org/ImageGallery">
           <div class="grid-col grid-col--1"></div>
           <div class="grid-col grid-col--2"></div>
           <div class="grid-col grid-col--3"></div>
           <div class="grid-col grid-col--4"></div>
           <% (0...@cat.pictures.count).each do |picture| %>
-            <div class="image-placeholder grid-item">
-              <%= image_tag(@cat.other_pictures(picture), alt:"#{Breed.find(@cat.breed_id).name} kitten", class:"thumbnail materialboxed") %> 
-            </div>
+            <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="image-placeholder grid-item">
+              <%= link_to polymorphic_url(@cat.other_pictures(picture)), itemprop:"contentUrl", data: { size:"#{kitten_pictures_dimensions(@cat, picture)[:width]}x#{kitten_pictures_dimensions(@cat, picture)[:height]}" } do %>
+                <%= image_tag(@cat.other_pictures(picture), alt:"#{Breed.find(@cat.breed_id).name} kitten", itemprop:"thumbnail", class:"thumbnail") %> 
+              <% end %>
+            </figure>
           <% end %>
         </div>
       <% end %>
@@ -274,5 +274,56 @@
   
   <div id="contact" class="section contact">
     <%= render 'shared/contact_form', user: @user, cat: @cat %>
+  </div>
+</div>
+
+<!-- Root element of PhotoSwipe. Must have class pswp. -->
+<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+  <!-- Background of PhotoSwipe. -->
+  <div class="pswp__bg"></div>
+  <!-- Slides wrapper with overflow:hidden. -->
+  <div class="pswp__scroll-wrap">
+    <!-- Container that holds slides. 
+        PhotoSwipe keeps only 3 of them in the DOM to save memory.
+        Don't modify these 3 pswp__item elements, data is added later on. -->
+    <div class="pswp__container">
+        <div class="pswp__item"></div>
+        <div class="pswp__item"></div>
+        <div class="pswp__item"></div>
+    </div>
+    <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+    <div class="pswp__ui pswp__ui--hidden">
+        <div class="pswp__top-bar">
+            <!--  Controls are self-explanatory. Order can be changed. -->
+            <div class="pswp__counter"></div>
+            <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+            <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+            <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+            <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
+            <!-- element will get class pswp__preloader--active when preloader is running -->
+            <div class="pswp__preloader">
+                <div class="pswp__preloader__icn">
+                  <div class="pswp__preloader__cut">
+                    <div class="pswp__preloader__donut"></div>
+                  </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+            <div class="pswp__share-tooltip"></div> 
+        </div>
+
+        <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+        </button>
+
+        <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+        </button>
+
+        <div class="pswp__caption">
+            <div class="pswp__caption__center"></div>
+        </div>
+    </div>
   </div>
 </div>
