--- a/app/views/help/what_is_catlinker.html.erb
+++ b/app/views/help/what_is_catlinker.html.erb
@@ -5,7 +5,7 @@
       <p><%== t('help.what_is_catlinker_page.summary') %></p>
       <div class="col s12 m6 offset-m3">
         <div class="video-wrapper">
-          <%= video_tag "video.mp4", class:"video", poster: "poster_en.png" %>
+          <%= video_tag "#{@video_title}.mp4", class:"video", poster: "poster_en.png" %>
           <i class="far fa-play-circle play-btn"></i>
         </div>
       </div>
